[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2008???? - 1.22.90

[-] * Fix some memory leaks found by cppcheck.
[-] * Fix unsafe sprintf usage in some modules.
[!] * Improve debugging facilities to use state machine debug
      configuration when possible.
[!] * Separate SMS daemon out of gammu binary.
[!] * SMSD now requires [gammu] section in config file.
[+] * Added pkgconfig support for gsmsd (SMSD library).
[+] * Debug logging can be handled by custom function in application.
[+] * SMSD log now includes gammu log messages.
[+] * SMSD now can log to syslog.
[+] * SMSD can now deamonize itself.
[+] * All callbacks can now pass user data along.
[+] * SMSD can now write PID file.
[+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
    
20081219 - 1.22.1

[-] * Fix model name parsing.
[-] * Fix reading of IrMC phonebook.
[-] * Fix visibility of HAVE_STRUCT_TM_TM_ZONE in header files.
[-] * Increase some timeouts in OBEX driver.
[-] * Fix compilation on s390.
    
20081218 - 1.22.0

[-] * Disable ATOBEX for Motorola V180.
[-] * vCard can now store caller group and private flag (bug #269).
[-] * vCard now stores location and memory type.
[-] * Add ID for Nokia 6131 NFC (bug #775).
    
20081210 - 1.21.94

[-] * Better skipping of corrupted messages in AT (bug #768).
[-] * Autoload 6510 module if phone is S40 (bug #767).
[-] * Add ID for Nokia 6500s (bug #770).
[-] * Add automatic detection of Nokia phones (bug #770).
[-] * Catch error when calls can not be deleted (bug #738).
[-] * Better documentation of addnew (bug #734).
[-] * Fix detection of OBEX capability on older Siemens phones.
[-] * Try to detect wrongly formatted CMGL reply (bug #771);
[-] * Handle phones which fail to report supported charsets.
[-] * Fixed encoding of WAP indicator messages.
[+] * Support for photos in vCard (bug #227).
[!] * vC* saving now protects against buffer overflows.
    
20081202 - 1.21.93
