@@ -167,17 +167,6 @@ use locking (eg. you need to be member of uucp group).
 
 This option has no meaning on Windows.
 
-.TP
-.BI UsePhoneDB
-
-Should Gammu connect to www.gammu.org and check for latest firmware versions
-available for the device? If enabled (value "yes"), the file
-<http://www.gammu.org/gammunet/support/phones/phonedbxml.php?model=x> will be
-downloaded, all phone details will be read from it and (if any higher firmware exist)
-displayed info to user on each application startup. No private data are sent to
-server. Internet connection to www.gammu.org on port 80 required. This option
-is disabled by default.
-
 .SH EXAMPLE
 
 There is more complete example available in Gammu documentation.
